@@ -10,6 +10,7 @@ Version 3.0.5 (12-13-11)
 -Minor tweak to comments hook. 
 -Minor HTML markup tweak.
 -Removed 404 image.
+-Fixed slider caption bug on Index page. 
 
 Version 3.0.4 (12-09-11)
 -Removed cursor: pointer; from all iMenu css. 
